--- a/src/main.css
+++ b/src/main.css
@@ -216,6 +216,40 @@ body {
   background-color: lightgray;
 }
 
+#image-preview {
+  z-index: 2;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #000000dd;
+  display: grid;
+  place-content: center;
+}
+
+#image-preview .extras {
+  position: fixed;
+  top: 24px;
+  right: 24px;
+  background-color: #3d3d7d99;
+  padding: 12px 18px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  font-family: inherit;
+  font-size: 16px;
+  font-weight: bold;
+
+  label {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 6px;
+  }
+}
+
 #pop-up {
   z-index: 1;
   position: fixed;
@@ -726,7 +760,7 @@ button#toggle-theme svg {
   align-items: center;
 }
 
-#chat-messages .message-card .content {
+#chat-messages .message-card span.content {
   flex-grow: 1;
   width: 100%;
   padding: 12px;
@@ -735,8 +769,17 @@ button#toggle-theme svg {
   font-size: 14px;
 }
 
-#chat-messages .message-card .content:focus {
+#chat-messages .message-card span.content:focus {
   outline: none;
+}
+
+#chat-messages .message-card img.content {
+  flex-grow: 1;
+  width: 100%;
+  height: 300px;
+  padding: 48px;
+  border: 1px solid #aaddff50;
+  object-fit: contain;
 }
 
 #chat-messages .message-card .time {
@@ -781,19 +824,18 @@ button#toggle-theme svg {
 
 #chat-messages .message-card .features-container {
   z-index: 1;
-  background-color: #303044;
-  border: 0.5px solid #aaddff77;
+  background-color: #2d2d5dbb;
+  border: 1px solid #ffffff35;
   width: 100px;
-  height: 50px;
   display: flex;
   flex-direction: column;
 }
 
 #chat-messages .message-card .features-container button {
-  background-color: #aaddff15;
-  height: 50%;
+  background-color: transparent;
   padding: 0;
-  border: 0.5px solid #aaddff77;
+  padding-block: 4px;
+  border: none;
   text-align: center;
   color: #aaddffcc;
   font-size: 13px;
@@ -901,40 +943,6 @@ button#toggle-theme svg {
   
   svg {
     fill: #aaddff;
-  }
-}
-
-#cyber-chats .image-preview {
-  z-index: 1;
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background-color: #000000dd;
-  display: grid;
-  place-content: center;
-}
-
-#cyber-chats .image-preview .extras {
-  position: fixed;
-  top: 24px;
-  right: 24px;
-  background-color: #3d3d7d99;
-  padding: 12px 18px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 16px;
-  font-family: inherit;
-  font-size: 16px;
-  font-weight: bold;
-
-  label {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 6px;
   }
 }
 
