--- a/src/main.css
+++ b/src/main.css
@@ -1173,6 +1173,7 @@ button#add-friend:active {
 
 #add-friend-profile-left img {
   width: 100%;
+  aspect-ratio: 1 / 1;
   border: 2px solid #aaddff;
 }
 
