--- a/src/main.css
+++ b/src/main.css
@@ -86,8 +86,8 @@ body {
 }
 
 #auth-greeting {
-  height: 20%;
-  padding-inline: calc(var(--auth-size) / 40);
+  height: 15%;
+  padding-inline: 24px;
   display: flex;
   align-items: flex-end;
   text-align: center;
@@ -95,7 +95,7 @@ body {
 }
 
 #auth-input {
-  height: 40%;
+  height: 50%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -146,8 +146,18 @@ body {
   }
 }
 
+#auth-input .error-info {
+  position: absolute;
+  top: 150%;
+  left: 5%;
+  width: 90%;
+  text-align: center;
+  color: red;
+  font-size: 14px;
+}
+
 #auth-button {
-  height: 25%;
+  height: 20%;
   display: grid;
   justify-content: center;
   align-items: start;
@@ -432,7 +442,7 @@ body {
 }
 
 #cyber-page {
-  background-color: #000000cc;
+  background-color: #000000dd;
   height: 100vh;
   display: flex;
   flex-direction: column;
