--- a/src/main.css
+++ b/src/main.css
@@ -446,10 +446,6 @@ button {
     box-shadow: none;
   }
 
-  &::-webkit-scrollbar-thumb:hover {
-    background-color: #99b;
-  }
-
   &::-webkit-scrollbar-button:single-button:decrement,
   &::-webkit-scrollbar-button:single-button:increment {
     display: none;
@@ -999,6 +995,7 @@ button {
   }
 
   .message-card > .right {
+    flex-grow: 1;
     padding-right: 12px;
     display: flex;
     flex-direction: column;
@@ -1111,6 +1108,65 @@ button {
   .message-card .features button svg {
     width: 16px;
     fill: inherit;
+  }
+
+  .message-card .edit-input {
+    width: 100%;
+    padding-block: 6px;
+    display: flex;
+    flex-direction: column;
+    gap: 6px;
+  }
+
+  .message-card .edit-input .input-container {
+    background-color: #404050;
+    width: 100%;
+    height: calc(1.25 * 15px + 24px);
+    max-height: calc(6 * 1.25 * 15px + 24px);
+    padding-inline: 12px;
+    border-radius: 6px;
+    display: flex;
+    align-items: center;
+  }
+
+  .message-card .edit-input .input-container textarea {
+    resize: none;
+    background-color: transparent;
+    width: 100%;
+    height: calc(100% - 24px);
+    padding: 0;
+    border: none;
+    line-height: 1.25;
+    color: #d1d5db;
+    font-size: 15px;
+    font-family: inherit;
+  }
+
+  .message-card .edit-input .input-container textarea:focus {
+    outline: none;
+  }
+
+  .message-card .edit-input .input-container textarea::placeholder {
+    color: #779;
+  }
+
+  .message-card .edit-input .bottom span {
+    color: #bbb;
+    font-size: 12px;
+  }
+
+  .message-card .edit-input .bottom button {
+    background-color: transparent;
+    padding: 0;
+    border: none;
+    color: #bbf;
+    font-size: 12px;
+    font-family: inherit;
+  }
+
+  .message-card .edit-input .bottom button:hover,
+  .message-card .edit-input .bottom button:focus-visible {
+    border-bottom: 1px solid #bbf;
   }
 }
 
