--- a/src/main.css
+++ b/src/main.css
@@ -539,7 +539,7 @@ button {
 
   > .top {
     z-index: 1;
-    height: 55px;
+    flex: 0 0 55px;
     display: flex;
     box-shadow: 0px 0px 8px 1px #191919;
   }
@@ -607,7 +607,7 @@ button {
 }
 
 #chat-sidebar {
-  min-width: var(--sidebar-width);
+  flex: 0 0 var(--sidebar-width);
   display: flex;
   flex-direction: column;
 }
@@ -1836,7 +1836,7 @@ button {
     position: absolute;
     left: 0;
     bottom: 0;
-    width: 250px;
+    width: var(--sidebar-width);
     height: 100%;
     display: flex;
     border-right: 1px solid var(--border-color);
