--- a/src/main.css
+++ b/src/main.css
@@ -1124,6 +1124,39 @@ button {
     left: 0;
     right: 0;
   }
+
+  .replying-message {
+    margin-top: 12px;
+    padding-inline: 32px;
+    display: flex;
+    align-items: center;
+  }
+
+  .replying-message > .v-line {
+    align-self: flex-end;
+    background-color: #777;
+    width: 2px;
+    height: calc(50% + 1px);
+  }
+
+  .replying-message > .h-line {
+    background-color: #777;
+    width: 32px;
+    height: 2px;
+  }
+
+  .replying-message > img {
+    width: 20px;
+    height: 20px;
+    margin-inline: 6px;
+    border-radius: 100%;
+    user-select: none;
+  }
+
+  .replying-message > span {
+    user-select: none;
+    font-size: 12px;
+  }
 }
 
 #message-features {
@@ -1466,6 +1499,68 @@ button {
     svg {
       border: 1px solid white;
     }
+  }
+
+  .replying-message-popup {
+    position: absolute;
+    top: -44px;
+    background-color: #17171c;
+    width: 100%;
+    height: 44px;
+    border-radius: 6px;
+    display: flex;
+    align-items: center;
+  }
+
+  .replying-message-popup > svg {
+    fill: white;
+    width: 44px;
+    height: 44px;
+    padding: 10px;
+    border-radius: 6px;
+  }
+
+  .replying-message-popup > .v-line {
+    background-color: white;
+    width: 4px;
+    height: 28px;
+    margin-right: 12px;
+    border-radius: 2px;
+  }
+
+  .replying-message-popup > img {
+    object-fit: contain;
+    width: 24px;
+    height: 24px;
+    margin-right: 6px;
+    border-radius: 4px;
+  }
+
+  .replying-message-popup > .info {
+    flex-grow: 1;
+    width: 0;
+    display: flex;
+    flex-direction: column;
+    user-select: none;
+    font-size: 12px;
+  }
+
+  .replying-message-popup button {
+    background-color: transparent;
+    width: 44px;
+    height: 44px;
+    padding: 12px;
+    border: none;
+    border-radius: 6px;
+    fill: #bbb;
+  }
+
+  .replying-message-popup button:hover {
+    fill: white;
+  }
+
+  .replying-message-popup button:focus-visible {
+    border: 1px solid white;
   }
 
 }
