--- a/src/main.css
+++ b/src/main.css
@@ -1261,7 +1261,7 @@ button {
   }
 }
 
-#message-delete {
+#message-modal {
   z-index: 1;
   position: fixed;
   top: 0;
@@ -1274,7 +1274,7 @@ button {
   align-items: center;
 }
 
-#message-delete > .container {
+#message-modal > .container {
   position: relative;
   background-color: var(--message-background);
   width: 400px;
@@ -1374,16 +1374,6 @@ button {
   left: 0;
   width: 100%;
   height: 60px;
-  padding-bottom: 8px;
-  padding-inline: 24px;
-  display: flex;
-  align-items: flex-end;
-
-  span {
-    color: #aab;
-    font-size: 12px;
-    line-height: 1;
-  }
 }
 
 #chat-message .message-input {
@@ -1982,14 +1972,14 @@ button {
     border-bottom-right-radius: 0;
   }
 
-  #message-delete > .container {
+  #message-modal > .container {
     align-self: flex-end;
     width: 100vw;
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
   }
 
-  #message-delete > .container .buttons {
+  #message-modal > .container .buttons {
     flex-direction: column-reverse;
   }
 }
