Enable user to use image-preview's menu to check image details, open image in a new browser, copy image link, and download image

--- a/src/main.css
+++ b/src/main.css
@@ -2016,3 +2016,12 @@ button {
     flex-direction: column-reverse;
   }
 }
+
+a {
+  font-size: 16px;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  height: 100px;
+  width: 100px;
+}
