--- a/src/main.css
+++ b/src/main.css
@@ -1992,6 +1992,19 @@ button {
 }
 
 @media screen and (max-width: 480px) {
+  #image-preview {
+    background-color: black;
+  }
+
+  #image-preview img {
+    max-width: 100vw;
+  }
+
+  #image-preview .menu {
+    top: 24px;
+    margin-inline: 16px;
+  }
+
   #chat-header .name {
     flex-direction: column;
     font-size: 14px;
