--- a/src/main.css
+++ b/src/main.css
@@ -1402,11 +1402,29 @@ button {
 }
 
 #chat-message .footer {
+  position: relative;
   background-color: #25262d;
   bottom: 0;
   left: 0;
   width: 100%;
   height: 60px;
+
+  button.scroll-newest {
+    position: absolute;
+    top: -64px;
+    right: 24px;
+    background-color: #445;
+    width: 32px;
+    height: 32px;
+    padding: 6px;
+    border: none;
+    border-radius: 100%;
+    fill: #ccd;
+  }
+
+  button.scroll-newest:active {
+    background-color: #667;
+  }
 }
 
 #chat-message .message-input {
@@ -1461,7 +1479,6 @@ button {
     font-size: 16px;
     font-family: inherit;
   }
-
 
   textarea:focus {
     outline: none;
